--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <title>Frontend Mentor | Results summary component</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div class="app__main">
+      <div id="root"></div>
+      <script type="module" src="/src/main.jsx"></script>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a href="https://github.com/hyghyn" target="_blank">HYGHYN</a>.
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/hyghyn" target="_blank">HYGHYN</a>.
+      </div>
     </div>
   </body>
 </html>
